<resources>
    <string name="app_name">LocalTasker</string>
    <string name="title_activity_home_drawer">HomeDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--Admin-->
    <string name="action_category_admin">Categories</string>

    <string name="menu_home">Home</string>
    <string name="menu_upload_task">Upload Task</string>
    <string name="menu_my_tasks">My Tasks</string>
    <string name="menu_my_bids">My Bids</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
